python/test-data/testIterableImplicitAny.err
Traceback (most recent call last):
  File "test-data/testIterableImplicitAny.py", line 13, in <module>
    foo(NotIterable)
WyppTypeError: type does not meet the requirements of protocol WIterable.
It is missing the function '__iter__'.

given:    <class '__wypp__.NotIterable'>
expected: value of type Iterable[Any]

context: foo(it: Iterable[Any]) -> int
                 ^^^^^^^^^^^^^
declared at: test-data/testIterableImplicitAny.py:7
caused by: test-data/testIterableImplicitAny.py:13
  | foo(NotIterable)
